--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <!-- Header start -->
     <header class="container mx-auto ">
-        <div class="md:bg-[#F85559] py-2 rounded-full px-10">
+        <div class="md:bg-[#F85559] py-0 md:py-2 rounded-full px-10">
             <div class="flex items-center justify-between ">
                 <div class="dropdown lg:hidden">
                     <label tabindex="0" class="btn btn-ghost btn-circle">
@@ -76,9 +76,11 @@
                     </button>
                 </div>
             </div>
+        </div>
     </header>
     <!-- Header end -->
-    <main class="container mx-auto py-10">
+    <main class="container mx-auto py-5 md;py-10">
+
         <!-- banner section start -->
         <div class="carousel w-full">
             <!-- first carousel -->
@@ -264,7 +266,7 @@
         </div>
 
         <!-- Deal of the day -->
-        <div class="container mx-auto py-20 px-5 lg:px-0 ">
+        <div class="container mx-auto py-5 md:py-10 lg:py-20 px-5 lg:px-0 ">
             <div class=" md:flex lg:flex md:gap-32 lg:gap-48 space-y-4 ">
                 <div class="space-y-3">
                     <h2 class="text-3xl text-center md:text-left md:text-4xl font-bold">Deal of the day</h2>
@@ -304,7 +306,7 @@
             <!-- deal of the day card -->
             <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 py-10 ">
                 <!-- First card start  -->
-                <div class="card  bg-base-100 shadow-xl">
+                <div class="card border border-gray-300 bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
                         <img src="./images/fruit1.png" alt="" class="rounded-xl" />
                     </figure>
@@ -363,7 +365,7 @@
 
                 <!-- Second card start -->
 
-                <div class="card  bg-base-100 shadow-xl">
+                <div class="card border border-gray-300  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
                         <img src="./images/fruit3.png" alt="" class="rounded-xl" />
                     </figure>
@@ -422,7 +424,7 @@
                 <!-- Second card ends -->
 
                 <!-- Third card start -->
-                <div class="card  bg-base-100 shadow-xl">
+                <div class="card border border-gray-300  bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
                         <img src="./images/fruit4.png" alt="" class="rounded-xl" />
                     </figure>
@@ -481,7 +483,7 @@
                 <!-- Third card Ends -->
 
                 <!-- Fourth card start -->
-                <div class="card  bg-base-100 shadow-xl">
+                <div class="card border border-gray-300 bg-base-100 shadow-xl">
                     <figure class="px-6 pt-10">
                         <img src="./images/fruit2.png" alt="" class="rounded-xl" />
                     </figure>
@@ -538,16 +540,18 @@
                 </div>
                 <!-- Fourth card ends -->
             </div>
-            <button class="btn bg-[#F85559] text-white block mx-auto mt-8">Show all</button>
+            <button class="btn bg-[#F85559] text-white block mx-auto mt-0 md:mt-8">Show all</button>
         </div>
 
         <!-- Meet the team section -->
-        <div class="container mx-auto px-5 md:px-0">
-            <div class="meet-section w-full h-auto   md:h-auto lg:h-[690px] text-white text-center py-20">
-                <h1 class="text-5xl font-bold">Meet the team section</h1>
-                <p class="py-5 w-2/3 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a
+        <div class="container mx-auto px-5 md:px-0 mt-5 ">
+            <div class="meet-section w-full h-auto  md:h-auto lg:h-[690px] text-white text-center py-10 md:py-20">
+                <h1 class="text-4xl font-bold hidden md:block ">Meet the team section</h1>
+                <h1 class="text-4xl font-bold md:hidden">Meet the team </h1>
+                <p class="py-5 w-3/4 md:w-3/5  mx-auto">Contrary to popular belief, is not simply random text. It has
+                    roots in a
                     piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <div class="grid md:grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3">
+                <div class="grid md:grid-cols-2 lg:grid-cols-4 md:gap-2 lg:gap-3 lg:px-10">
                     <div class="card   shadow-xl">
                         <figure class="px-10 pt-10">
                             <img src="./images/member1.png" alt="" class="rounded-xl" />
@@ -567,7 +571,7 @@
                             <img src="./images/member2.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center space-y-3">
-                            <h2 class="card-title text-2xl">Safia Chowdhury</h2>
+                            <h2 class="card-title text-2xl ">Salma islam</h2>
                             <p class="text-[18px]">Fruits Expert</p>
                             <div class="card-actions flex gap-4 text-2xl ">
                                 <i class="fa-brands fa-facebook-f bg-red-500 px-2 py-1 rounded-full"></i>
@@ -608,7 +612,7 @@
             </div>
         </div>
         <!-- why choose us -->
-        <section class="container mx-auto text-center py-10">
+        <section class="container mx-auto text-center py-10 hidden lg:block">
             <h2 class="text-3xl md:text-5xl font-bold ">Why Choose Us</h2>
             <p class="w-3/5 mx-auto py-3">Contrary to popular belief, is not simply random text. It has roots in a piece
                 of
@@ -672,9 +676,7 @@
                                     class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">
                                     The Benefits Only</h2>
                                 <hr class=" w-3/5   border border-1 mt-1 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx"">
-                    <p class=" text-center md:text-center lg:text-left block">Professional employees are there for you
-                                to pick the most amazing and
-                                fresh fruits.</p>
+                    <p class=" text-center md:text-center lg:text-left block">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
 
                             </div>
                         </div>
@@ -699,8 +701,8 @@
                                 fruits.</p>
                         </div>
                         <div>
-                            <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto"
-                                src="./images/fruit6.png" alt="">
+                            <img class=" w-[70px]  md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto"
+                                src="./images/fruit2.png" alt="">
                         </div>
                     </div>
                     <!-- second description -->
@@ -733,22 +735,149 @@
                     </div>
                     <!-- right column ends -->
 
+                </div>
+            </div>
+        </section>
+        <!-- why chose ends -->
+        <!-- Why chose for mobile device starts-->
+        <section class="container mx-auto text-center py-10 lg:hidden">
+            <h2 class="text-3xl md:text-5xl font-bold ">Why Choose Us</h2>
+            <p class="w-3/5 mx-auto py-3">Contrary to popular belief, is not simply random text. It has roots in a piece
+                of
+                classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            <div class="grid md:grid-cols-2-center lg:grid-cols-3 md;gap-5 gap-y-6 gap-x-6 px-5 md:px-0 mt-10">
+                <!-- top column  start-->
+                <div class="flex md:justify-center ">
+                    <img class="object-cover" src="./images/whychoose1.png" alt="">
+                </div>
+                <!-- top column ends -->
+                <!-- middle column -->
+                <div class="grid  md:grid-col-3 gap-y-5 md:gap-y-8 lg:gap-4">
+                    <!-- first description -->
+                    <div class="flex justify-start items-start">
+
+                        <div
+                            class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto">
+                            <div class="w-full mx-auto flex  justify-center md:w-0 pr-7">
+                                <i
+                                    class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                            </div>
+                            <div class="card-body p-0 ">
+                                <h2
+                                    class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">
+                                    Integrated Supplier</h2>
+                                <hr class="w-3/5 border border-1 mt-2 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx">
+                                <p class="text-center md:text-center lg:text-left block">Professional employees are
+                                    there for you to pick the most amazing and
+                                    fresh fruits.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- second description -->
+                    <div class="flex justify-start items-start">
+
+                        <div
+                            class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto  ">
+                            <div class="w-full mx-auto flex  justify-center md:w-0 pr-7">
+                                <i
+                                    class="fa-light fa-people text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full"></i>
+                            </div>
+                            <div class="card-body p-0 ">
+                                <h2
+                                    class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">
+                                    Sustainable Practice</h2>
+                                <hr class=" w-3/5 border border-1 mt-1 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx">
+                                <p class="text-center md:text-center lg:text-left block">Professional employees are
+                                    there for you to pick the most amazing and
+                                    fresh fruits.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- third description -->
+                    <div class="flex justify-start items-start ">
+
+                        <div
+                            class="card card-side bg-base-100 flex items-start gap-5  flex-col md:flex-col lg:flex-row lg:pl-10 md:mx-auto ">
+                            <div class=" w-full mx-auto flex  justify-center md:w-0 pr-7">
+                                <i
+                                    class="fa-solid fa-stamp text-3xl bg-gray-200 flex justify-center p-5 items-center   rounded-full  "></i>
+                            </div>
+                            <div class="card-body p-0  ">
+                                <h2
+                                    class="card-title text-2xl font-bold text-center lg:text-left md:text-center block ">
+                                    The Benefits Only</h2>
+                                <hr class=" w-3/5   border border-1 mt-1 ml-[80px] md:ml-[100px] lg:ml-1 border-black mx"">
+                    <p class=" text-center md:text-center lg:text-left block">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- middle  column end -->
+                
+
+                <!-- Right column start -->
+                <div class="grid grid-cols-1  md:grid-col-3 gap-3 gap-y-5">
+                    <!-- first description -->
+                    <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+                        <div class="text-center md:text-center lg:text-right">
+                            <h2 class="text-2xl font-bold">Integrated Supplier</h2>
+                            <hr
+                                class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+                            <p class="py-2">Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</p>
+                        </div>
+                        <div>
+                            <img class=" w-[70px]  md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto"
+                                src="./images/fruit2.png" alt="">
+                        </div>
+                    </div>
+                    <!-- second description -->
+                    <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+                        <div class="text-center md:text-center lg:text-right">
+                            <h2 class="text-2xl font-bold">Sustainable Practice</h2>
+                            <hr
+                                class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+                            <p class="py-2">Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</p>
+                        </div>
+                        <div>
+                            <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto"
+                                src="./images/fruit8.png" alt="">
+                        </div>
+                    </div>
+                    <!-- third description -->
+                    <div class=" flex-col md:flex lg:flex-row justify-end gap-5">
+                        <div class="text-center md:text-center lg:text-right">
+                            <h2 class="text-2xl font-bold">The Benefits Only</h2>
+                            <hr
+                                class=" w-2/5  border border-1 mt-2 ml-[120px] md:ml-[220px] lg:ml-[150px] border-black mx">
+                            <p class="py-2">Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</p>
+                        </div>
+                        <div>
+                            <img class=" w-[70px] md:w-[120px] bg-gray-200 rounded-full p-2 mx-auto"
+                                src="./images/fruit7.png" alt="">
+                        </div>
+                    </div>
+                    <!-- right column ends -->
 
                 </div>
-
-
             </div>
-
         </section>
+        <!-- why choose for mobile device ends -->
 
     </main>
+
     <!-- Footer section -->
     <footer class="bg-black py-32 w-full mx-auto text-white space-y-8">
         <div class=" font-bold  flex items-center gap-x-3 justify-center">
             <img class="w-10 md:w-12" src="./images/logo.png" alt="">
-            <h2 class="text-2xl md:text-[32px] lg:text-[40px] md:text-white">Fruits Brust</h2>
+            <h2 class="text-2xl md:text-[28px] lg:text-[36px] md:text-white font-lato">Fruits Brust</h2>
         </div>
-        <div class="flex flex-wrap gap-x-10 gap-y-5 px-5 md:px-0 items-center  justify-center py-5">
+        <div class="flex flex-wrap gap-x-10 gap-y-5 px-5 md:px-0 items-center  justify-center py-5 font-lato">
             <a href="">Home</a>
             <a href="">About us</a>
             <a href="">All Fruits</a>
